--- a/public/profile-roast.html
+++ b/public/profile-roast.html
@@ -1,3 +1,148 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GitHub Profile Roaster</title>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: #2b4162;
+            background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-family: "Poppins", sans-serif;
+            margin: 0;
+            min-height: 100vh;
+        }
+
+        input {
+            background-color: #2b4162;
+            border-radius: 10px;
+            border: none;
+            box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+                0 15px 40px rgba(0, 0, 0, 0.1);
+            color: white;
+            font-family: inherit;
+            font-size: 1rem;
+            padding: 1rem;
+            margin-bottom: 2rem;
+        }
+
+        input::placeholder {
+            color: #bbb;
+        }
+
+        input:focus {
+            outline: none;
+        }
+
+        #welcomePage {
+            text-align: center;
+            margin: 1rem;
+        }
+
+        #welcomePage h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            color: rgb(198, 195, 188);
+        }
+
+        #welcomePage p {
+            font-size: 1.3rem;
+            margin-bottom: 1rem;
+            color: rgb(198, 195, 188);
+        }
+
+        #githubLogo {
+            width: 200px;
+        }
+
+        #searchBtn {
+            background-color: #2b4162;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 1rem;
+            margin-left: 1rem;
+            cursor: pointer;
+            font-family: inherit;
+            font-size: 1rem;
+        }
+
+        #searchBtn:hover {
+            background-color: #163c63;
+        }
+
+        .card {
+            background-color: #6daddb;
+            background-image: linear-gradient(315deg, #6daddb 0%, #313131 74%);
+            border-radius: 20px;
+            box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+                0 15px 40px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2rem;
+            max-width: 600px;
+            margin-bottom: 2rem;
+        }
+
+        .avatar {
+            border: 5px solid #202022;
+            border-radius: 50%;
+            height: 150px;
+            width: 150px;
+        }
+
+        .user-info {
+            color: #eee;
+            margin-top: 1rem;
+            text-align: center;
+        }
+
+        .user-info h2 {
+            margin: 0;
+            font-size: 2rem;
+        }
+
+        .roast {
+            background-color: #2e2e3a;
+            border-radius: 10px;
+            color: white;
+            font-size: 1.2rem;
+            padding: 1rem;
+            margin-top: 1rem;
+            max-width: 100%;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div id="welcomePage">
+        <img src="github.jpeg" alt="GitHub Logo" id="githubLogo" />
+        <h1>Welcome to the GitHub Profile Roaster</h1>
+        <p>This simple tool allows you to roast a GitHub user based on their profile.</p>
+        <p>Enter a GitHub username:</p>
+        
+        <form id="form">
+            <input type="text" id="search" placeholder="Search a GitHub User" />
+            <button type="button" id="searchBtn">Search</button>
+        </form>
+    </div>
+    <main id="main"></main>
+    <script src="roast.js" defer></script>
+</body>
+</html> -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
