roast card updated

--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Detective</title>
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div id="welcomePage">
-        <img src="github.jpeg" alt="GitHub Logo" id="githubLogo" />
-        <h1>Welcome to GitHub Insight</h1>
-        <p>Choose a service to get started:</p>
-        
-        <div id="serviceButtons">
-            <div class="glare-card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <button onclick="location.href='profile-generator.html'">💻 Profile Generator</button>
-                    </div>
-                    <div class="card-back">
-                        <p style="font-size: 25px;">
-                            👨‍💻 Generate a personalized GitHub profile card by entering the username.
-                            The tool creates a custom profile showcasing your bio, repositories.
-                        </p>
-                        
-                    </div>
-                </div>
+      <img src="github.jpeg" alt="GitHub Logo" id="githubLogo" />
+      <h1>Welcome to GitHub Insight</h1>
+      <p>Choose a service to get started:</p>
+
+      <div id="serviceButtons">
+        <div class="glare-card">
+          <div class="card-inner">
+            <div class="card-front">
+              <button onclick="location.href='profile-generator.html'">
+                💻 Profile Generator
+              </button>
             </div>
-            <div class="glare-card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <button onclick="location.href='profile-roast.html'">🔥 Profile Roast</button>
-                    </div>
-                    <div class="card-back">
-                        <p style="font-size: 25px;">
-                            😄 Create a custom GitHub profile card that humorously critiques the user's profile, repositories, and contributions with witty remarks.</p>
-                    </div>
-                </div>
+            <div class="card-back">
+              <p style="font-size: 25px">
+                👨‍💻 Generate a personalized GitHub profile card by entering the
+                username. The tool creates a custom profile showcasing your bio,
+                repositories.
+              </p>
             </div>
-            <div class="glare-card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <button onclick="location.href='profile-analyzer.html'">🔍 Profile Analyzer</button>
-                    </div>
-                    <div class="card-back">
-                        <p style="font-size: 25px;">
-                            📊 Generate a personalized GitHub profile card showcasing the user's bio, repositories, and contributions with detailed insights and emojis.</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="glare-card">
+          <div class="card-inner">
+            <div class="card-front">
+                <button id="redirectButton">
+                    🔥 Profile Roast
+                  </button>
+            </div>
+            <div class="card-back">
+              <p style="font-size: 25px">
+                😄 Create a custom GitHub profile card that humorously critiques
+                the user's profile, repositories, and contributions with witty
+                remarks.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="glare-card">
+          <div class="card-inner">
+            <div class="card-front">
+              <button onclick="location.href='profile-analyzer.html'">
+                🔍 Profile Analyzer
+              </button>
+            </div>
+            <div class="card-back">
+              <p style="font-size: 25px">
+                📊 Generate a personalized GitHub profile card showcasing the
+                user's bio, repositories, and contributions with detailed
+                insights and emojis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+    <script>
+        document.getElementById('redirectButton').addEventListener('click', function() {
+          window.location.href = 'https://trial-eight-steel.vercel.app/';
+        });
+      </script>
+
+  </body>
 </html>
