roast link updated

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     </div>
     <script>
         document.getElementById('redirectButton').addEventListener('click', function() {
-          window.location.href = 'https://trial-eight-steel.vercel.app/';
+          window.location.href = 'https://github-roast-kappa.vercel.app/';
         });
       </script>
 
